<resources>
    <string name="app_name">Discount System</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Settings</string>
    <string name="machines_uses">Використання машин</string>
    <string name="welcome">Доброго дня, </string>
    <string name="your_stock">Ваше місце роботи - склад під номером %1$d</string>
    <string name="products">Продукти</string>
    <string name="machines">Машини</string>
    <string name="magnetic_cards">Магнітні карти</string>
    <string name="users">Користувачі</string>
    <string name="customers">Споживачі</string>
    <string name="previous">Попередній</string>
    <string name="next">Наступний</string>
    <string name="edit">Редагувати</string>
    <string name="add">Додати</string>
    <string name="Delete">Видалити</string>
    <string name="profile">Профіль</string>
    <string name="logout">Вийти</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="login">Увійти</string>
    <string name="wrong_input">Невірні дані</string>
    <string name="machine_id">Machine Id</string>
    <string name="product_id">Product  Id</string>
    <string name="customer_id">Customer Id</string>
    <string name="magnetic_card_id">Magnetic card Id</string>
    <string name="date">Дата</string>
    <string name="value_taken">"Взята кількість "</string>
    <string name="username">Ім\'я користувача</string>
    <string name="email">Е-мейл</string>
    <string name="password">Пароль</string>
    <string name="role">Роль</string>
    <string name="allow">Дозволити використання</string>
    <string name="surname">Прізвище</string>
    <string name="name">Ім\'я</string>
    <string name="patronimyc">По батькові</string>
    <string name="company">Назва компанії</string>
    <string name="company_address">Адреса компанії</string>
    <string name="telephone">Телефон</string>
    <string name="type">Тип</string>
    <string name="location">Місце знаходження</string>
    <string name="plenum">Заповненість</string>
    <string name="status">Статус</string>
    <string name="product_name">Назва продукту</string>
    <string name="terms">Термін придатності</string>
    <string name="value">Кількість</string>
    <string name="statistics">Статистика</string>
    <string name="certain_statistics">Дутальна статистика</string>
    <string name="certain_statistics_for_all">Детальна статистика для всіх машин</string>
    <string name="auth">Авторизація</string>
    <string name="cancel">Відміна</string>
    <string name="generate_stat">Показати статистику</string>
    <string name="month">Місяць</string>
    <string name="read">Зчитати</string>
    <string name="focus_camera">Будьласка, сфокусуйте камеру</string>
    <string name="occupation">Місце работи:</string>
    <string name="save">Зберегти зміни</string>
    <string name="back">Назаж</string>
    <string name="product">Продукт</string>
    <string name="unit">Одиниця</string>
    <string name="costPerUnit">Ціна за одиницю</string>
    <string name="stock">Склад</string>
    <string name="invoices">Накладні</string>
    <string name="productsFlow">Потік продукції</string>
    <string name="stockId">Номер складу:</string>
    <string name="description">Опис:</string>
    <string name="address">Адреса:</string>
    <string name="stockName">Ім\'я:</string>
    <string name="stock_items">Продукція складу</string>
    <string name="invoice">Накладна</string>
    <string name="employee">Співробітник:</string>
    <string name="third_party">Третя сторона:</string>
    <string name="supplement">Постачання:</string>
    <string name="barcode_reader">Зчитувач штрихкодiв</string>
    <string name="log_out">Вийти</string>
    <string name="bills">Чеки</string>
    <string name="balance">Баланс</string>
    <string name="your_balance">Ваш баланс:</string>
    <string name="title_activity_barcode_reader">BarcodeReader</string>
    <string name="sum">Сума</string>
    <string name="discount">Знижка</string>
    <string name="registration">Реєстрація</string>
    <string name="register">Зареєструватись</string>
</resources>
