<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group android:checkableBehavior="single">
    <item android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_account_circle_black_24dp"/>
    <item android:id="@+id/nav_balance"
        android:title="@string/balance"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"/>
    <item android:id="@+id/nav_bills"
        android:title="@string/bills"
        android:icon="@drawable/ic_view_list_black_24dp"/>
    <item android:id="@+id/nav_qr"
        android:title="@string/barcode_reader"
        android:icon="@drawable/ic_camera_alt_black_24dp"/>
</group>
<item android:title="">
    <menu>
        <item android:title="@string/log_out"
            android:id = "@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            />
    </menu>
</item>
</menu>